[package]
name = "katara"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
juniper = "0.16.2"
juniper_axum = "0.2.0"
serde = "1.0.219"
serde_json = "1.0.142"
surrealdb = "2.3.7"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.1"
tonic-reflection = "0.14.1"

[build-dependencies]
tonic-build = "0.12"
